_sass/style.scss
@import "fonts";

*:not(link) {
	outline: none;
	margin: 0;
	padding: 0;
	max-width: 100%;
	box-sizing: border-box;
	transition: 0.2s;
	color: inherit;
	scroll-behavior: smooth;
}

body {
	background-color: var(--bg-color);
	font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color: var(--text-color);
	font-weight: 400;
}

.noselect {
	user-select: none;
	-o-user-select: none;
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
}

input,
button {
	cursor: pointer;
}

textarea,
input[type="text"],
input[type="email"],
input[type="password"],
input[type="number"],
input[type="tel"],
input[type="url"],
input[type="search"] {
	cursor: text;
}

input {
	background-color: var(--header-hover-bg);
	border-radius: 12px;
	border: 1px solid transparent;
}

input:hover {
	border: 1px solid var(--link-color);
}

input:focus {
	color: var(--code-fg);
	background-color: var(--code-bg);
	border: 1px solid var(--link-color);
}

table {
	width: unset !important;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	color: var(--heading-color);
	margin: 0 0 20px;
}

p {
	text-align: justify;
}

p,
ul,
ol,
table,
pre,
dl {
	margin: 0 0 20px;
}

ul,
ol {
	padding-left: 12px;
}

li {
	list-style-position: inside;
}

h1,
h2,
h3 {
	line-height: 1.1;
}

h1 {
	font-size: 28px;
}

h2 {
	color: var(--heading2-color);
}

h3,
h4,
h5,
h6 {
	color: var(--heading3-color);
}

a {
	color: var(--link-color);
	text-decoration: none;
}

a:hover,
a:focus {
	color: var(--link-hover-color);
	/* Fake bold */
	text-shadow: 0px 0px 1px var(--link-hover-shadow);
}

a small {
	font-size: 11px;
	color: var(--link-small-color);
	margin-top: -0.3em;
	display: block;
}

a:hover small {
	color: var(--link-small-color);
}

blockquote {
	border-left: 1px solid var(--blockquote-border);
	margin: 0;
	padding: 0 0 0 20px;
	font-style: italic;
}

code,
pre {
	font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
	color: var(--code-fg);
}

*:not(pre) > code {
	background: var(--kbd-bg);
	color: var(--strong-color);
	padding: 3px 6px;
	border-radius: 8px;
	border: 1px solid var(--table-border);
}

pre {
	padding: 8px 15px;
	background: var(--code-bg);
	border-radius: 5px;
	border: 1px solid var(--code-border);
	overflow-x: auto;
}

table {
	width: 100%;
	border-collapse: collapse;
}

th,
td {
	text-align: left;
	padding: 5px 10px;
	border-bottom: 1px solid var(--table-border);
}

dt {
	color: var(--dt-color);
	font-weight: 700;
}

th {
	color: var(--th-color);
}

